--- a/index.css
+++ b/index.css
@@ -1,3 +1,30 @@
+@font-face {
+    font-family: inter;
+    src: url("./media/Inter/static/Inter_18pt-Regular.ttf");
+}
+
+@font-face {
+    font-family: inter_bold;
+    src: url("./media/Inter/static/Inter_18pt-Bold.ttf")
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    color: white;
+}
+
+
+body {
+    background-color: #1E1B1B;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
 header {
+    margin-top: 1%;
     display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-grow: 1;
 }
